--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -8,8 +8,10 @@
     <h4>Social Links:-</h4>
     <ul class="social_links">
       <li>
-        <a href="https://www.instagram.com/pradeep__raaz/" target="_blank"
-          ><i class="bi bi-linkedin"></i> pradeep__raaz</a
+        <a
+          href="https://www.linkedin.com/in/pradeep-kumar-42a29737/"
+          target="_blank"
+          ><i class="bi bi-linkedin"></i> Pradeep Kumar</a
         >
       </li>
       <li>
