--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -12,45 +12,31 @@
   @include media-breakpoint-down(lg) {
     background-size: 100%;
     background-attachment: fixed;
-    padding-top: 100vh;
+    padding-top: 80vh;
     .col-lg-8 {
       padding-top: 20px;
-      background-color: rgba(255, 255, 255, 0.7);
+      min-height: 100vh;
+      background-color: rgba(255, 255, 255, 0.8);
     }
   }
-}
-p + h4 {
-  margin-top: 30px;
-}
-.social_links {
-  font-size: 18px;
-  margin-bottom: 20px;
-  li {
-    display: inline-block;
-    margin-right: 10px;
-    margin-bottom: 5px;
-    @include media-breakpoint-down(md) {
-      display: block;
-    }
-    i {
-      vertical-align: middle;
-    }
+  p {
+    font-size: 22px;
   }
-}
-img {
-  max-width: 100%;
-  max-height: 100%;
-  @include media-breakpoint-up(lg) {
-    position: absolute;
-    left: 0;
-    top: 0;
+  p + h4 {
+    margin-top: 30px;
   }
-  @include media-breakpoint-down(xl) {
-    max-width: 320px;
+  .social_links {
     margin-bottom: 20px;
-  }
-  @include media-breakpoint-down(md) {
-    max-width: 100%;
-    margin-bottom: 20px;
+    li {
+      display: inline-block;
+      margin-right: 10px;
+      margin-bottom: 5px;
+      @include media-breakpoint-down(md) {
+        display: block;
+      }
+      i {
+        vertical-align: middle;
+      }
+    }
   }
 }
