--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400&display=swap");
 body {
   font-family: "Raleway", sans-serif;
-  font-size: 22px;
+  font-size: 18px;
 }
 ul {
   padding: 0;
@@ -20,3 +20,4 @@ a {
 }
 
 @import "./app/about-me/about-me.component.scss";
+@import "./app/my-skills/my-skills.component.scss";
