--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -8,7 +8,7 @@
         </div>
         <div class="txt_area">
           <span>Angular</span>
-          <span>4+</span>
+          <span>{{ 2019 | experience }}+</span>
         </div>
       </div>
     </li>
@@ -19,7 +19,7 @@
         </div>
         <div class="txt_area">
           <span>HTML5</span>
-          <span>8+</span>
+          <span>{{ 2014 | experience }}+</span>
         </div>
       </div>
     </li>
@@ -30,7 +30,7 @@
         </div>
         <div class="txt_area">
           <span>CSS3</span>
-          <span>8+</span>
+          <span>{{ 2014 | experience }}+</span>
         </div>
       </div>
     </li>
@@ -41,7 +41,7 @@
         </div>
         <div class="txt_area">
           <span>Bootstrap</span>
-          <span>6+</span>
+          <span>{{ 2016 | experience }}+</span>
         </div>
       </div>
     </li>
@@ -63,7 +63,7 @@
         </div>
         <div class="txt_area">
           <span>SASS/SCSS</span>
-          <span>5+</span>
+          <span>{{ 2017 | experience }}+</span>
         </div>
       </div>
     </li>
@@ -74,7 +74,7 @@
         </div>
         <div class="txt_area">
           <span>Javascript</span>
-          <span>6+</span>
+          <span>{{ 2016 | experience }}+</span>
         </div>
       </div>
     </li>
@@ -85,7 +85,7 @@
         </div>
         <div class="txt_area">
           <span>jQuery</span>
-          <span>5+</span>
+          <span>{{ 2017 | experience }}+</span>
         </div>
       </div>
     </li>
