--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -2,50 +2,57 @@
   <div class="col-lg-8 offset-lg-4">
     <h1>Pradeep Kumar</h1>
     <p>
-      Sr. UI Developer with 8+ years experience. Currenty working in Publicis
+      Sr. UI Developer with {{ 2012 | experience }}+ years experience. Currenty working in Publicis
       Sapient in Gurugram.
     </p>
+
+    <h2>Professional Summary:</h2>
+    <ul class="experience">
+      <li>{{ 2012 | experience }}+ Years of IT experience in UI Development.</li>
+      <li>{{ 2019 | experience }}+ Years in Angular.</li>
+      <li>Actively involved with client interactions and gathering requirements.</li>
+      <li>Have a sound exposer on RTL (right to left) Websites.</li>
+      <li>Possess good skills to work effectively with team.</li>
+      <li>Always have a commitment to continued training, learning and motivating.</li>
+    </ul>
+
+    <h3>Work Experiences:</h3>
+    <ul class="experience">
+      <li><strong>July 2019 – Till</strong> Now Sr. Associate L1 in Publicis Sapient</li>
+      <li><strong>Jan 2019 – July 2019</strong> Sr. UI Developer in Srympex Staffing</li>
+      <li><strong>Dec 2014 – Jan 2019</strong> Sr. UI Developer in SATC Marketing India Pvt. Ltd.</li>
+      <li><strong>Oct 2012 – Dec 2014</strong> UI Developer in Excel Books.</li>
+    </ul>
+
     <h4>Social Links:-</h4>
     <ul class="social_links">
       <li>
-        <a
-          href="https://www.linkedin.com/in/pradeep-kumar-42a29737/"
-          target="_blank"
-          ><i class="bi bi-linkedin"></i> Pradeep Kumar</a
-        >
+        <a href="https://www.linkedin.com/in/pradeep-kumar-42a29737/" target="_blank"><i class="bi bi-linkedin"></i>
+          Pradeep Kumar</a>
       </li>
       <li>
-        <a href="https://www.facebook.com/pradeepkumar.anvi/" target="_blank"
-          ><i class="bi bi-facebook"></i> pradeepkumar.anvi</a
-        >
+        <a href="https://www.facebook.com/pradeepkumar.anvi/" target="_blank"><i class="bi bi-facebook"></i>
+          pradeepkumar.anvi</a>
       </li>
       <li>
-        <a href="https://www.instagram.com/pradeep__raaz/" target="_blank"
-          ><i class="bi bi-instagram"></i> pradeep__raaz</a
-        >
+        <a href="https://www.instagram.com/pradeep__raaz/" target="_blank"><i class="bi bi-instagram"></i>
+          pradeep__raaz</a>
       </li>
     </ul>
     <h4>Contact Details:-</h4>
     <ul class="social_links">
       <li>
-        <a href="tel:+91-9818896233" target="_blank"
-          ><i class="bi bi-phone"></i> +91-9818896233</a
-        >
+        <a href="tel:+91-9818896233" target="_blank"><i class="bi bi-phone"></i> +91-9818896233</a>
       </li>
       <li>
-        <a href="https://wa.me/919818896233" target="_blank"
-          ><i class="bi bi-whatsapp"></i> +91-9818896233</a
-        >
+        <a href="https://wa.me/919818896233" target="_blank"><i class="bi bi-whatsapp"></i> +91-9818896233</a>
       </li>
       <li>
-        <a href="mailto:pradeepkumar.anvi@gmail.com" target="_blank"
-          ><i class="bi bi-mailbox"></i> pradeepkumar.anvi@gmail.com</a
-        >
+        <a href="mailto:pradeepkumar.anvi@gmail.com" target="_blank"><i class="bi bi-mailbox"></i>
+          pradeepkumar.anvi@gmail.com</a>
       </li>
       <li>
-        <a href="mailto:stac.pradee@gmail.com" target="_blank"
-          ><i class="bi bi-mailbox"></i> stac.pradeep@gmail.com</a
-        >
+        <a href="mailto:stac.pradee@gmail.com" target="_blank"><i class="bi bi-mailbox"></i> stac.pradeep@gmail.com</a>
       </li>
     </ul>
   </div>
