--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/scss/bootstrap.scss";
 @import "~bootstrap-icons/font/bootstrap-icons.css";
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500&display=swap");
 html{
   scroll-behavior: smooth;
 }
 body {
   font-family: "Raleway", sans-serif;
   font-size: 18px;
+}
+strong{
+  font-weight: 500;
 }
 ul {
   padding: 0;
